log
Wed 23 Aug 2023 04:45:29 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:7: error: expected identifier or ‘(’ before ‘->’ token
   32 |   List->head=NULL;
      |       ^~
Compilation failed
1a19333
Wed 23 Aug 2023 04:45:51 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: unused variable ‘head’ [-Werror=unused-variable]
   32 |   List *head=NULL;
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
45208c6
Wed 23 Aug 2023 04:50:14 PM UTC: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
bb201d0
Wed 23 Aug 2023 04:58:02 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:26: error: ‘data’ undeclared (first use in this function)
   41 |   return &(list->current-data);
      |                          ^~~~
list.c:41:26: note: each undeclared identifier is reported only once for each function it appears in
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d4ed7eb
Wed 23 Aug 2023 04:58:22 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:25: error: ‘Node’ has no member named ‘head’
   41 |   return &(list->current->head);
      |                         ^~
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
cdf49e3
Wed 23 Aug 2023 04:58:34 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
00dfed3
Wed 23 Aug 2023 04:58:59 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
afe54f9
Wed 23 Aug 2023 05:00:22 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
647ab34
Wed 23 Aug 2023 05:00:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
88712d9
